
# This file is part of p4est.
# Makefile.am in example/read_forest
# included non-recursively from toplevel directory

if P4EST_BUILD_2D
bin_PROGRAMS += example/read_forest/p4est_read_forest
example_read_forest_p4est_read_forest_SOURCES = example/read_forest/read_forest.c

LINT_CSOURCES += $(example_read_forest_p4est_read_forest_SOURCES)
endif
