
# This file is part of the p4est library
# Makefile.am in example/second
# included non-recursively from toplevel directory

if P4EST_BUILD_2D
bin_PROGRAMS += example/second/p4est_second
example_second_p4est_second_SOURCES = example/second/second.c

LINT_CSOURCES += $(example_second_p4est_second_SOURCES)
endif
