
# This file is part of p4est.
# Makefile.am in example/sieve
# included non-recursively from toplevel directory

if P4EST_ENABLE_BUILD_2D
if P4EST_ENABLE_BUILD_3D

bin_PROGRAMS += example/sieve/p48est_sieve
example_sieve_p48est_sieve_SOURCES = example/sieve/sieve23.c

LINT_CSOURCES += $(example_sieve_p48est_sieve_SOURCES)

endif
endif
